[gd_scene load_steps=4 format=2]

[ext_resource path="res://Starmap/Star.gd" type="Script" id=1]
[ext_resource path="res://Starmap/star.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.188235, 0.188235, 0.815686 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.776471, 0.776471, 0.776471, 0.815686 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="Star" type="Node2D"]
script = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
margin_left = -7.75
margin_top = -7.5
margin_right = 8.25
margin_bottom = 8.5
rect_pivot_offset = Vector2( 8, 8 )
mouse_default_cursor_shape = 3
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Z_Index" type="Node2D" parent="."]
z_index = 1

[node name="Infotext" type="Label" parent="Z_Index"]
anchor_right = 1.0
margin_left = -19.875
margin_top = 13.625
margin_right = 20.125
margin_bottom = 31.625
mouse_filter = 0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.815686 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Icon" to="." method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="." method="_on_Icon_mouse_exited"]
